--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
 }
 
-#header{
+header{
     height: 100px;
     width: auto;
     background-image: url('img/pattern.png');
@@ -20,6 +20,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     padding-top: 20px;
+    padding-left: 165px;
 }
 
 h1{
