--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
     background-color: dodgerblue;
 }
 
+/*Qui ho modificato il padding*/
 #boolean{
     height: 120px;
     width: 200px;
